--- a/WhatISTinkerhub/style01.css
+++ b/WhatISTinkerhub/style01.css
@@ -1,8 +1,16 @@
+body{
+    margin: 0%;
+}
+.root{
+    background-color: rgb(220, 235, 197);
+    margin: 0%;
+    width: 100%;
+    height: 100%;
+   }
 h1{
     text-align: center;
 }
-.body{
-    margin-top: 0%;
+.heading{
     margin-left: 25%;
     margin-right: 25%;
     padding-top: 5px;
@@ -12,4 +20,22 @@ p{
     text-align: center;
     padding-left: 25%;
     padding-right: 25%;
+}
+.leftdiv01{
+    float: left;
+    width: 25%;
+    height: 400%;
+    background-color: beige;
+}
+.rightdiv01{
+    float: left;
+    width: 75%;
+    height: 25%;
+    background-color: beige;
+}
+.sample{
+    background-color: black;
+    width: 30%;
+    height: 20%;
+
 }
