--- a/WhatISTinkerhub/style01.css
+++ b/WhatISTinkerhub/style01.css
@@ -7,6 +7,10 @@ body{
     width: 100%;
     height: 100%;
    }
+.links_onboard{
+    background-color: rgb(168, 168, 226);
+    width: 100%;
+}
 h1{
     text-align: center;
 }
@@ -20,6 +24,9 @@ p{
     text-align: center;
     padding-left: 25%;
     padding-right: 25%;
+}
+a{
+    color: rgb(19, 17, 17);
 }
 .leftdiv01{
     float: left;
