--- a/WhatISTinkerhub/CSS/style01.css
+++ b/WhatISTinkerhub/CSS/style01.css
@@ -1,6 +1,10 @@
 body{
     margin: 0%;
 }
+img{
+    width: 50px;
+    height: 50px;
+}
 .root{
     background-color: rgb(220, 235, 197);
     margin: 0%;
@@ -8,7 +12,7 @@ body{
     height: 100%;
    }
 .links_onboard{
-    background-color: rgb(168, 168, 226);
+    background-color: rgb(179, 162, 147);
     width: 100%;
 }
 h1{
